# OneStroke2026

./: .gitattributes  .gitignore  README.md  eval.py  infer.py  pyproject.toml  train.py
checkpoints/unet_rebaseline_v1/: best.pt
configs/: data.yaml  train_segformer_b2.yaml  train_segformer_b2_smoke.yaml  train_segformer_b2_v1_b0_base.yaml  train_segformer_b2_v1_b1_keypoint.yaml  train_unet.yaml  train_unet_rebaseline_v1.yaml  train_unet_smoke.yaml
docs/: architecture_image2_prompt.md  codex_handoff_2026-07-19.md  font_aware_model_plan.md  liuxiaofan_task_2_hardset.md  postdoc_progress_report_2026-07-11.md  segformer_v1_preflight.md  unet_rebaseline_report_2026-07-12.md  zhang_ronghao_task_1_3.md
reviews/: hardset_review.csv
src/onestroke_model/: __init__.py  config.py  constants.py  inference.py
src/onestroke_model/data/: __init__.py  audit.py  dataset.py  split.py  transforms.py
src/onestroke_model/losses/: multilabel.py
src/onestroke_model/metrics/: segmentation.py
src/onestroke_model/models/: __init__.py  factory.py  segformer.py  unet.py
src/onestroke_model/scripts/: __init__.py  audit_data.py  build_splits.py  calibrate_thresholds.py  make_hardset_template.py  merge_hardset_review.py  prepare_hardset_review.py  preview_augmentations.py
src/onestroke_model/utils/: io.py  seed.py
templates/: hardset_review_template.csv
tests/: test_data_transforms.py  test_multilabel_loss.py  test_segmentation_metrics.py
